--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "busboy": "^0.3.1",
+    "pino": "^6.8.0",
+    "pino-pretty": "^4.3.0",
     "socket.io": "3.0"
   }
 }
