--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,15 @@
-{"name": "frontend",
-"version": "1.0.0",
-"description": "",
-"main": "index.js",
-"scripts": {
-  "start": "npx http-server --cors public"
-},
+{
+  "name": "frontend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "npx http-server --cors public"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "http-server": "^14.1.0"
+    "http-server": "^0.12.3"
   }
 }
