--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "busboy": "^0.3.1",
     "pino": "^6.8.0",
     "pino-pretty": "^4.3.0",
-    "socket.io": "3.0"
+    "socket.io": "3.0",
+    "vimeo": "^2.1.1"
   }
 }
